Revise game descriptions and update titles
Updated content for Dragon Ball and God of War sections.

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 
             </ul>
         </nav>
-        <h2>Sparking Zebi
+        <h2>Sparking Zero
         </h2>
         <!-- titre de second niveau -->
         <style type="text/css"></style>
 
         <p class="style-texte1">
             <!-- paragraphe -->
-            Dragon Ball: Sparking! Zebi est un jeu vidéo de combat développé par Spike
+            Dragon Ball: Sparking! Zero est un jeu vidéo de combat développé par Spike
             Chunsoft et édité par Bandai
             <br>
             <!-- retour a la ligne -->
@@ -111,5 +111,6 @@
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen="allowfullscreen"></iframe>
         </body>
+
 
     </body>
